tests/unit/errors/test9.js
// Archivo sin sentido
assdlkfnfjklndgs lm;fsd
 asklnfdg
 sdnlk kdklfslknns
  aslkdn
  